pantalla consulta dinámica

--- a/DashboardAccidentes/DashboardAccidentes.csproj
+++ b/DashboardAccidentes/DashboardAccidentes.csproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <Content Include="Resources\down.png" />
     <Content Include="Resources\down1.png" />
+    <None Include="Resources\plus_64.png" />
     <Content Include="Resources\up.png" />
     <Content Include="Resources\up1.png" />
   </ItemGroup>
