--- a/DashboardAccidentes/DashboardAccidentes.csproj
+++ b/DashboardAccidentes/DashboardAccidentes.csproj
@@ -35,6 +35,7 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -46,6 +47,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AccidentesBDDataSet.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>AccidentesBDDataSet.xsd</DependentUpon>
+    </Compile>
+    <Compile Include="Negocio\Controlador.cs" />
+    <Compile Include="Negocio\DAO_Carga.cs" />
+    <Compile Include="Negocio\DAO_SQL.cs" />
+    <Compile Include="Negocio\DTO.cs" />
+    <Compile Include="Negocio\TipoIdentificador.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -85,9 +96,26 @@
     <EmbeddedResource Include="Vista\FormConsultaDinamica.resx">
       <DependentUpon>FormConsultaDinamica.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Vista\FormConsultaIndicadores.resx">
+      <DependentUpon>FormConsultaIndicadores.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Vista\FormConsultaLibre.resx">
+      <DependentUpon>FormConsultaLibre.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Vista\FormInicial.resx">
       <DependentUpon>FormInicial.cs</DependentUpon>
     </EmbeddedResource>
+    <None Include="AccidentesBDDataSet.xsc">
+      <DependentUpon>AccidentesBDDataSet.xsd</DependentUpon>
+    </None>
+    <None Include="AccidentesBDDataSet.xsd">
+      <Generator>MSDataSetGenerator</Generator>
+      <LastGenOutput>AccidentesBDDataSet.Designer.cs</LastGenOutput>
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="AccidentesBDDataSet.xss">
+      <DependentUpon>AccidentesBDDataSet.xsd</DependentUpon>
+    </None>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -102,7 +130,6 @@
     <None Include="App.config" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Controlador\" />
     <Folder Include="Modelo\" />
   </ItemGroup>
   <ItemGroup>
