--- a/DashboardAccidentes/DashboardAccidentes.csproj
+++ b/DashboardAccidentes/DashboardAccidentes.csproj
@@ -58,6 +58,7 @@
     <Compile Include="Negocio\DAO_Query.cs" />
     <Compile Include="Negocio\DAO_SQL.cs" />
     <Compile Include="Negocio\DTO.cs" />
+    <Compile Include="Negocio\GeneradorGraficos.cs" />
     <Compile Include="Negocio\TipoIdentificador.cs" />
     <Compile Include="Properties\Resources.Designer.cs">
       <AutoGen>True</AutoGen>
