--- a/DashboardAccidentes/DashboardAccidentes.csproj
+++ b/DashboardAccidentes/DashboardAccidentes.csproj
@@ -162,6 +162,7 @@
   <ItemGroup>
     <Content Include="Resources\down.png" />
     <Content Include="Resources\down1.png" />
+    <Content Include="Vista\JavaScript1.js" />
     <None Include="Resources\plus_64.png" />
     <None Include="Resources\eliminar_64.png" />
     <Content Include="Resources\up.png" />
